--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
-  "name": "oppai-ng-node",
+  "name": "noppai",
+  "description": "Noppai has Native bindings for Oppai-ng",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Mempler",
   "license": "MIT",
   "repository": "https://git.gigamons.de/Mempler/noppai/",
+  "keywords": [
+    "oppai-ng",
+    "osu",
+    "performance-points",
+    "pp",
+    "mempler"
+  ],
   "scripts": {
-    "install": "node-gyp build",
     "test": "node tests/test.js",
     "build": "node-gyp rebuild; node tests/test.js"
   },
   "dependencies": {
     "bindings": "^1.3.0",
     "nan": "^2.10.0"
+  },
+  "devDependencies": {
+    "node-gyp": "^3.6.2"
   }
 }
